Test Environment Variables

--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -1,5 +1,2 @@
 NODE_PATH=./
-REACT_APP_PUSHER_APP_ID=0
-REACT_APP_PUSHER_KEY=0
-REACT_APP_PUSHER_SECRET=0
-REACT_APP_PUSHER_CLUSTER=us2
+REACT_APP_TEST=Foo
