--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.8",
     "@types/react-bootstrap": "^0.32.17",
     "@types/react-dom": "16.8.3",
+    "@types/react-router-dom": "^4.3.1",
     "prettier": "^1.16.4",
     "tslint-config-inmotionnow": "^1.0.5",
     "tslint-misc-rules": "^3.5.1"
@@ -19,6 +20,7 @@
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
   },
